--- a/portfolio.html
+++ b/portfolio.html
@@ -104,11 +104,23 @@
                   alt="Technocrack"
                 />
                 <figcaption class="hit">
+                  <div class="box">
+                    <div class="overlay">
+                      <p>
+                        Technocrack jest popularną platformą wykorzystywaną do
+                        rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                        platformę do celów szpiegowskich i ataków na
+                        niezabezpieczone serwery konkurencji
+                        <code>div.box</code>
+                      </p>
+                    </div>
+                  </div>
                   <h5 class="photo-one">Technocrack</h5>
                   <p class="header-secondary">Strona internetowa</p>
                 </figcaption>
               </figure>
             </li>
+
             <li>
               <figure>
                 <img
