--- a/portfolio.html
+++ b/portfolio.html
@@ -123,12 +123,22 @@
 
             <li>
               <figure>
-                <img
-                  src="images/img(1).jpg"
-                  width="370"
-                  height="294"
-                  alt="Grafika New Orlean vs Golden Star"
-                />
+                <div class="box">
+                  <img
+                    src="images/img(1).jpg"
+                    width="370"
+                    height="294"
+                    alt="Grafika New Orlean vs Golden Star"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Grafika New Orlean vs Golden Star jest popularną platformą
+                      wykorzystywaną do rozpowszechniania koronawirusa. Firmy
+                      wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="hit">
                   <h5 class="photo-one">Grafika New Orlean vs Golden Star</h5>
                   <p class="header-secondary">Dizajn</p>
@@ -137,12 +147,22 @@
             </li>
             <li>
               <figure>
-                <img
-                  src="images/img(2).jpg"
-                  width="370"
-                  height="294"
-                  alt="Restauracja Seafood"
-                />
+                <div class="box">
+                  <img
+                    src="images/img(2).jpg"
+                    width="370"
+                    height="294"
+                    alt="Restauracja Seafood"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Restauracja Seafood jest popularną platformą
+                      wykorzystywaną do rozpowszechniania koronawirusa. Firmy
+                      wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="hit">
                   <h5 class="photo-one">Restauracja Seafood</h5>
                   <p class="header-secondary">Aplikacja</p>
@@ -151,12 +171,22 @@
             </li>
             <li>
               <figure>
-                <img
-                  src="images/img(3).jpg"
-                  width="370"
-                  height="294"
-                  alt="Projekt Prime"
-                />
+                <div class="box">
+                  <img
+                    src="images/img(3).jpg"
+                    width="370"
+                    height="294"
+                    alt="Projekt Prime"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Marketing jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="hit">
                   <h5 class="photo-one">Projekt Prime</h5>
                   <p class="header-secondary">Marketing</p>
@@ -165,12 +195,22 @@
             </li>
             <li>
               <figure>
-                <img
-                  src="images/img(4).jpg"
-                  width="370"
-                  height="294"
-                  alt="Projekt Boxes"
-                />
+                <div class="box">
+                  <img
+                    src="images/img(4).jpg"
+                    width="370"
+                    height="294"
+                    alt="Projekt Boxes"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Projekt Boxes jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="hit">
                   <h5 class="photo-one">Projekt Boxes</h5>
                   <p class="header-secondary">Aplikacja</p>
@@ -179,12 +219,22 @@
             </li>
             <li>
               <figure>
-                <img
-                  src="images/img(5).jpg"
-                  width="370"
-                  height="294"
-                  alt="Inspiration has no Borders"
-                />
+                <div class="box">
+                  <img
+                    src="images/img(5).jpg"
+                    width="370"
+                    height="294"
+                    alt="Inspiration has no Borders"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Inspiration has no Borders jest popularną platformą
+                      wykorzystywaną do rozpowszechniania koronawirusa. Firmy
+                      wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="hit">
                   <h5 class="photo-one">Inspiration has no Borders</h5>
                   <p class="header-secondary">Strona internetowa</p>
@@ -193,12 +243,22 @@
             </li>
             <li>
               <figure>
-                <img
-                  src="images/img(6).jpg"
-                  width="370"
-                  height="294"
-                  alt="Magazyn Limited Edition"
-                />
+                <div class="box">
+                  <img
+                    src="images/img(6).jpg"
+                    width="370"
+                    height="294"
+                    alt="Magazyn Limited Edition"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Magazyn Limited Edition jest popularną platformą
+                      wykorzystywaną do rozpowszechniania koronawirusa. Firmy
+                      wykorzystują tę platformę do celów szpiegowskich i ataków
+                      na niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="hit">
                   <h5 class="photo-one">Magazyn Limited Edition</h5>
                   <p class="header-secondary">Dizajn</p>
@@ -207,12 +267,22 @@
             </li>
             <li>
               <figure>
-                <img
-                  src="images/img(7).jpg"
-                  width="370"
-                  height="294"
-                  alt="Projekt LAB"
-                />
+                <div class="box">
+                  <img
+                    src="images/img(7).jpg"
+                    width="370"
+                    height="294"
+                    alt="Projekt LAB"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Projekt LAB jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="hit">
                   <h5 class="photo-one">Projekt LAB</h5>
                   <p class="header-secondary">Marketing</p>
@@ -221,12 +291,22 @@
             </li>
             <li>
               <figure>
-                <img
-                  src="images/img(8).jpg"
-                  width="370"
-                  height="294"
-                  alt="Growing Business"
-                />
+                <div class="box">
+                  <img
+                    src="images/img(8).jpg"
+                    width="370"
+                    height="294"
+                    alt="Growing Business"
+                  />
+                  <div class="overlay">
+                    <p>
+                      Growing Business jest popularną platformą wykorzystywaną
+                      do rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </div>
+                </div>
                 <figcaption class="hit">
                   <h5 class="photo-one">Growing Business</h5>
                   <p class="header-secondary">Aplikacja</p>
