--- a/index.html
+++ b/index.html
@@ -131,14 +131,18 @@
         <section class="section third-section">
           <div class="container">
             <h2 class="other-sections-title">Czym się zajmujemy</h2>
+
             <ul class="third-secrion-grid">
               <li>
-                <img
-                  src="images/box1.png"
-                  width="370"
-                  height="294"
-                  alt="czym się zajmujemy"
-                />
+                <div class="wraper">
+                  <img
+                    src="images/box1.png"
+                    width="370"
+                    height="294"
+                    alt="czym się zajmujemy"
+                  />
+                  <p>Aplikacje Internetowe</p>
+                </div>
               </li>
               <li>
                 <img
