--- a/index.html
+++ b/index.html
@@ -145,20 +145,26 @@
                 </div>
               </li>
               <li>
-                <img
-                  src="images/box2.png"
-                  width="370"
-                  height="294"
-                  alt="czym się zajmujemy"
-                />
+                <div class="wraper">
+                  <img
+                    src="images/box2.png"
+                    width="370"
+                    height="294"
+                    alt="czym się zajmujemy"
+                  />
+                  <p>Aplikacje mobilne</p>
+                </div>
               </li>
               <li>
-                <img
-                  src="images/box3.png"
-                  width="370"
-                  height="294"
-                  alt="czym się zajmujemy"
-                />
+                <div class="wraper">
+                  <img
+                    src="images/box3.png"
+                    width="370"
+                    height="294"
+                    alt="czym się zajmujemy"
+                  />
+                  <p>Rozwiązania graficzne</p>
+                </div>
               </li>
             </ul>
           </div>
