--- a/index.html
+++ b/index.html
@@ -508,11 +508,12 @@
           </ul>
         </div>
       </div>
-      <div class="backdrop" data-modal>
+      <div class="backdrop is-hidden" data-modal>
         <div class="modal">
           <button type="button" class="close-btn" data-modal-close>x</button>
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
